further compact color definition

--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -53,13 +53,9 @@
 \setbeamercolor{itemize/enumerate subbody}{fg=csecondary}
 \setbeamercolor{itemize/enumerate subsubbody}{fg=csecondary!90!white}
 
-\setbeamercolor{itemize/enumerate item}{fg=csecondary}
-\setbeamercolor{itemize/enumerate subitem}{fg=csecondary!90!white}
-\setbeamercolor{itemize/enumerate subsubitem}{fg=csecondary!80!white}
-
-\setbeamercolor{description item}{fg=csecondary}
-\setbeamercolor{description subitem}{fg=csecondary!90!white}
-\setbeamercolor{description subsubitem}{fg=csecondary!80!white}
+\setbeamercolor{item}{fg=csecondary}
+\setbeamercolor{subitem}{fg=csecondary!90!white}
+\setbeamercolor{subsubitem}{fg=csecondary!80!white}
 
 \setbeamercolor{bibliography item}{fg=csecondary}
 \setbeamercolor{bibliography entry author}{fg=cprimary!75!csecondary}
