patching some img refs

--- a/colorful-dream/example.tex
+++ b/colorful-dream/example.tex
@@ -22,7 +22,7 @@
 
 % tikz code is possible as well!
 % TODO: you may want to change this if you do not have downloaded the image
-\titleimage{\includegraphics{exampletitleimage}}
+\titleimage{\includegraphics{exampletitleimage.png}}
 
 % just an example command
 \newcommand\twosplit[3][t]{%
