--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -19,7 +19,7 @@
 \email{florian.sihler@uni-ulm.de}
 
 \outro{Ulm, \today}
-\titleimage{\tikz\node[opacity=.45]{\includegraphics[width=\width,height=\height,keepaspectratio]{../exampletitleimage.png}};}
+\titleimage{\tikz\node[opacity=.45]{\includegraphics[width=\width,height=\height,keepaspectratio]{exampletitleimage.png}};}
 
 % just an example command
 \newcommand\twosplit[3][t]{%
