--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -377,6 +377,22 @@
     \mbox{\textcolor{btdl@color@primary!35!white}{\usebibmacro{date}}}%
     \newblock
     \usebibmacro{finentry}}}%
+\DeclareBibliographyAlias{article}{btdl@bibtheme}%
+\DeclareBibliographyAlias{book}{btdl@bibtheme}%
+\DeclareBibliographyAlias{booklet}{btdl@bibtheme}%
+\DeclareBibliographyAlias{collection}{btdl@bibtheme}%
+\DeclareBibliographyAlias{inbook}{btdl@bibtheme}%
+\DeclareBibliographyAlias{incollection}{btdl@bibtheme}%
+\DeclareBibliographyAlias{inproceedings}{btdl@bibtheme}%
+\DeclareBibliographyAlias{manual}{btdl@bibtheme}%
+\DeclareBibliographyAlias{misc}{btdl@bibtheme}%
+\DeclareBibliographyAlias{online}{btdl@bibtheme}%
+\DeclareBibliographyAlias{patent}{btdl@bibtheme}%
+\DeclareBibliographyAlias{periodical}{btdl@bibtheme}%
+\DeclareBibliographyAlias{proceedings}{btdl@bibtheme}%
+\DeclareBibliographyAlias{report}{btdl@bibtheme}%
+\DeclareBibliographyAlias{thesis}{btdl@bibtheme}%
+\DeclareBibliographyAlias{unpublished}{btdl@bibtheme}%
 \DeclareBibliographyAlias{*}{btdl@bibtheme}%
 \DeclareNameFormat{btdl@blx@nf}{\namepartfamily}%
 \DeclareFieldFormat{btdl@sb@title}{\textit{##1}}%
