--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -11,9 +11,9 @@
 \title{Example Presentation}
 \subtitle{This is madness}
 
-\date{14, August 2020}
+\date[14.08.2020]{14, August 2020}
 
-\author{Florian Sihler}
+\author[F.~Sihler]{Florian Sihler}
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
 \addbibresource{example.bib}
@@ -34,7 +34,7 @@
 
 \subsection{Algorithmen analysieren}
 \begin{frame}{Algorithmuseigenschaften}
-    \begin{itemize}
+    \begin{itemize}[<+(1)->]
         \item Zu Beginn gilt es einige Begriffe zu klären: \begin{description}[Elementaroperation]
             \item[Prozess] Die Ausführung der Schritte eines Algorithmus
             \item[Prozessor] Der Ausführende (Mensch, Computer, \ldots)
