--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -81,6 +81,7 @@
     Hello \cite{dirac}!
 \end{frame}
 
+\subsection{This is another example}
 \begin{frame}{Mega-Example 2}
     World as seen in \cite{einstein}.
 \end{frame}
