--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -8,7 +8,100 @@
 % die idee: gaanz unten ein dünner grauer block der alle Metainformationen enthält, oben nur ein Titel
 % break Folien für Sections mit simpler Dreiecks optic und übersicht über TOC -- neues Tut design
 
+\newif\ifbtdm@footfade@
+\DeclareOption{nofootfade}{\btdm@footfade@false} \DeclareOption{footfade}{\btdm@footfade@true}
+\ProcessOptions
+
+\RequirePackage[defaultfam,light,tabular,lining]{montserrat}
+\def\sbfamily{\fontseries{sb}\selectfont}
+
+\RequirePackage{sfmath} % TODO: no libs option
+
 \RequirePackage{relsize}
+
+\RequirePackage{tikz} % i do need it... always :)
+\RequirePackage{fontawesome} % foot symbols
+
+
+
+
+
+% this code is based on that of dividing-lines but modified.
+% if i have the time i will regroup it as a package
+% idee, zeige Auszug 'C > D > E > F > G' für 'Abschnitt E',
+% zeige allgemein immer 5 und versuche aktuelle section zu zentrieren
+\AtBeginDocument{%
+    \pgfmathsetmacro\btdm@sectionmax@target@preview{int(min(6,\arabic{btdm@sectioncount}))}%
+}
+
+\def\btdm@footer@tsymb#1{\hyperlink{btdm@slide@marker.#1}{\strut\(\lozenge\)}}
+\def\btdm@printshort@lowforsec#1{\@nameuse{btdm@section@#1@content}}
+
+\def\btdm@printshort@border{~~}
+\def\btdm@printshort@mid{~~}
+
+% we use very flat icons as sort of banners
+\newsavebox\btdm@subs@off \savebox\btdm@subs@off{\tikz{\path[draw,lightgray!70!white,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
+\newsavebox\btdm@subs@on \savebox\btdm@subs@on{\tikz{\path[fill,draw,lightgray!70!white,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
+\def\btdm@subsections@low#1{{% #1 is the section to filter
+\beamer@currentsubsection=0%
+\def\sectionentry##1##2##3##4##5{}%
+\def\slideentry##1##2##3##4##5##6{\ifnum##6=\c@part\ifnum##1=#1
+    \ifnum##2>\beamer@currentsubsection
+    \beamer@currentsubsection=##2%
+    \box\beamer@sectionbox\hskip1.25ex%
+    \setbox\beamer@sectionbox=%
+    \hbox{\beamer@link(##4){\ifnum\c@subsection=##2\ifnum##1=\c@section\relax\usebox\btdm@subs@on\else\usebox\btdm@subs@off\fi\else\usebox\btdm@subs@off\fi}}% TODO: deal with height, it is wrong with subs
+    \ht\beamer@sectionbox=\z@
+    \dp\beamer@sectionbox=\z@
+    \fi\fi\fi\ignorespaces}%
+\hskip1mm\setbox\beamer@sectionbox=\hbox{}%
+\hskip-1.25ex\dohead
+\box\beamer@sectionbox\hfil\hskip.1mm}}
+
+\newsavebox\btdm@box@lowforsec
+\def\btdm@typesetfiveforcurrent{%
+\ifnum\btdm@sectionmax@target@preview>0
+    % get start index as sec-2
+    \pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\value{section}-2))}%
+    \pgfmathsetmacro\btdm@sectionmax@target@end{int(min(\value{btdm@sectioncount},\btdm@sectionmax@target@start+\btdm@sectionmax@target@preview))}%
+    % try to update lower if upper was capped
+    \pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\btdm@sectionmax@target@end-\btdm@sectionmax@target@preview))}%
+    \btdm@footer@tsymb{1}~~\btdm@printshort@border
+    % start: \btdm@sectionmax@target@start, end: \btdm@sectionmax@target@end
+    \foreach \i in {\btdm@sectionmax@target@start,...,\btdm@sectionmax@target@end} {%
+        \ifbtdm@footfade@
+        \pgfmathsetmacro\btdm@disttotarget{int(min(100,max(5,30*abs(\i-\value{section}))))}%
+        \ifnum\i>\btdm@sectionmax@target@start
+            \pgfmathsetmacro\btdm@disttotarget@last{int(min(100,max(5,30*abs(\i-\value{section}-1))))}%
+            {\btdm@printshort@mid\color{lightgray!\btdm@disttotarget@last!darkgray}\,~\faAngleRight\,}\btdm@printshort@mid\fi
+        \color{lightgray!\btdm@disttotarget!darkgray}%
+        \else\ifnum\i>\btdm@sectionmax@target@start\btdm@printshort@mid{\thinspace~\faAngleRight\thinspace}\btdm@printshort@mid\fi\fi
+        \savebox\btdm@box@lowforsec{\btdm@printshort@lowforsec{\i}}%
+        % note: we always calc the non(semi)bold thickness
+        % \ifnum\value{section}=\i % old secton guard
+        \let\btdm@thesec\thesection
+        \hb@xt@\z@{\smash{\tiny\@declaredcolor{lightgray}\raisebox{\dimexpr-\ht\btdm@box@lowforsec+.3ex}{\hskip.5\wd\btdm@box@lowforsec\relax\hb@xt@\z@{\hss\btdm@subsections@low{\i}\hss}}}}\ifnum\value{section}=\i \sbfamily\fi % todo ubs for all?
+        \parbox{\dimexpr\wd\btdm@box@lowforsec+.5em}{\strut\hyperlink{btdm@section.\i}{\btdm@printshort@lowforsec{\i}}}%
+    }%
+    \btdm@printshort@border~~\btdm@footer@tsymb{\inserttotalframenumber}%
+\fi}
+
+\def\btdm@footline@data{\btdm@typesetfiveforcurrent}
+
+% inject sections
+\newcounter{btdm@sectioncount}
+\setcounter{btdm@sectioncount}{0}
+\let\oldsection\section
+
+\def\btdmcustomauxdef#1#2{\expandafter\gdef\csname btdm@section@#1@content\endcsname{#2}}
+
+\def\section{\@xdblarg\btdm@section}
+\def\btdm@section[#1]#2{%
+    \write\@auxout{\noexpand\global\noexpand\stepcounter{btdm@sectioncount}\noexpand\btdmcustomauxdef{\thesection}{#1}}%
+    \ifx!#1!\oldsection{#2}\else\oldsection[#1]{#2}\fi\hypertarget{btdm@section.\thesection}{}%
+}
+
 
 \setbeamercolor{foot-structure}{bg=lightgray!10!white,fg=gray}
 \setbeamercolor{foot-page-structure}{parent=foot-structure,fg=gray!75!darkgray}
@@ -16,11 +109,14 @@
 \usenavigationsymbolstemplate{}
 \newif\ifdmfoot \dmfoottrue
 \setbeamertemplate{footline}{\ifdmfoot
-\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,sep=2pt,shadow=false]{foot-structure}% default color
-    \minipage{\dimexpr\paperwidth-.5cm}%
+\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=4ex,sep=2pt,shadow=false]{foot-structure}% default color
+    \strut\minipage{\dimexpr\paperwidth-.5cm}%
     \usebeamerfont{page number in head/foot}%
-    \mbox{\insertshortauthor~| \insertshortdate~ }\hfill{\strut\textbf{\usebeamercolor[fg]{foot-page-structure}\insertframenumber\ifnum\insertframestartpage=\insertframeendpage\else{\smaller[2].\insertslidenumber}\fi}\smaller\,/\,\inserttotalframenumber}%
-    \endminipage
+    \mbox{\insertshortauthor~| \insertshortdate~ }\hfill
+    \parbox{.6\paperwidth}{\centering\smaller\btdm@footline@data}% TODO: configure width
+    \hfill% 6em should be enough space
+    \makebox[6em][r]{\strut\textbf{\usebeamercolor[fg]{foot-page-structure}\insertframenumber\ifnum\insertframestartpage=\insertframeendpage\else{\smaller[2].\insertslidenumber}\fi}\smaller\,/\,\inserttotalframenumber}%
+    \endminipage\strut
 \endbeamercolorbox\fi}
 
 \endinput
