--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -19,8 +19,9 @@
 \addbibresource{example.bib}
 \begin{document}
 
-\begin{frame}[plain,c]
+\begin{frame}[c]
     \titlepage
+    \revealfooton{2}
 \end{frame}
 
 \section{Theoretische Grundlagen}
