--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -48,6 +48,16 @@
     \end{itemize}
 \end{frame}
 
+\section{Ex}
+\begin{frame}{Eigenschaften für die Analyse}
+    \begin{itemize}
+        \item Die Begriffe sind zu unterscheiden!
+        \item So können bei einem Algorithmus verschiedene Wege zum selben Ziel führen.
+        \item (Sinnfreies) Beispiel: Der Algorithmus kann jedes Element eines Arrays quadrieren. Die Reihenfolge wählt er zufällig aus!
+        \item Dieser Algorithmus \emph{determiniert}, ist aber \emph{nicht-deterministisch}!
+    \end{itemize}
+\end{frame}
+\section{Another example}
 \begin{frame}{Eigenschaften für die Analyse}
     \begin{itemize}
         \item Die Begriffe sind zu unterscheiden!
@@ -57,8 +67,17 @@
     \end{itemize}
 \end{frame}
 
+\section{Excalibur}
+\begin{frame}{Eigenschaften für die Analyse}
+    \begin{itemize}
+        \item Die Begriffe sind zu unterscheiden!
+        \item So können bei einem Algorithmus verschiedene Wege zum selben Ziel führen.
+        \item (Sinnfreies) Beispiel: Der Algorithmus kann jedes Element eines Arrays quadrieren. Die Reihenfolge wählt er zufällig aus!
+        \item Dieser Algorithmus \emph{determiniert}, ist aber \emph{nicht-deterministisch}!
+    \end{itemize}
+\end{frame}
 
-\section{Another example}
+\section{Excommunicado}
 \subsection{This is an example}
 
 \begin{frame}{Mega-Example 1}
@@ -86,7 +105,7 @@
     Hello \cite{dirac}!
 \end{frame}
 
-\subsection{This is another example}
+\subsection{This is Ex}
 \begin{frame}{Mega-Example 2}
     World as seen in \cite{einstein}.
 \end{frame}
