fix center of bottoms

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -69,7 +69,7 @@
     \ht\beamer@sectionbox=.3ex%
     \dp\beamer@sectionbox=.25ex%
     \fi\fi\fi\ignorespaces}%
-\hskip1mm\setbox\beamer@sectionbox=\hbox{}%
+\hskip.1mm\setbox\beamer@sectionbox=\hbox{}%
 \hskip-1.25ex\dohead
 \box\beamer@sectionbox\hfil\hskip.1mm}}
 
