--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -34,10 +34,11 @@
 \setbeamercolor{background canvas}{bg=btdm@background}%
 \setbeamercolor{normal text}{fg=btdm@text}
 \setbeamerfont{structure}{family=\sbfamily}
-\setbeamercolor{structure-title}{parent=structure,fg=btdm@primary,bg=lightgray!20!white}
+\setbeamercolor{title-structure}{parent=structure,fg=btdm@primary,bg=lightgray!20!white}
 \setbeamerfont{strcuture-title}{parent=structure,size=\LARGE}
-\setbeamercolor{foot-structure}{bg=lightgray!10!white,fg=gray}
-\setbeamercolor{foot-page-structure}{parent=foot-structure,fg=gray!75!darkgray}
+\colorlet{btdm@foot}{gray}
+\setbeamercolor{foot-structure}{bg=lightgray!10!white,fg=btdm@foot}
+\setbeamercolor{foot-page-structure}{parent=foot-structure,fg=btdm@foot!75!darkgray}
 
 
 % this code is based on that of dividing-lines but modified.
@@ -55,8 +56,8 @@
 \def\btdm@printshort@mid{~~}
 
 % we use very flat icons as sort of banners
-\newsavebox\btdm@subs@off \savebox\btdm@subs@off{\tikz{\path[draw,lightgray!70!white,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
-\newsavebox\btdm@subs@on \savebox\btdm@subs@on{\tikz{\path[fill,draw,lightgray!70!white,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
+\newsavebox\btdm@subs@off \savebox\btdm@subs@off{\tikz{\path[draw,btdm@foot!55!btdm@background,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
+\newsavebox\btdm@subs@on \savebox\btdm@subs@on{\tikz{\path[fill,draw,btdm@foot!55!btdm@background,rounded corners=.2mm] (-.09,-.02) rectangle (.09,.02);}}
 \def\btdm@subsections@low#1{{% #1 is the section to filter
 \beamer@currentsubsection=0%
 \def\sectionentry##1##2##3##4##5{}%
@@ -120,15 +121,18 @@
 \newif\ifdmfoot \dmfoottrue
 \def\revealfooton#1{\only<-\the\numexpr#1-1|handout:0>{\global\dmfootfalse}\only<#1->{\global\dmfoottrue}}
 % allows to display foot on animations
-\def\dmfootbottomleft{\insertshortauthor~| \insertshortdate~ }% Todo allow for stuff like tut
+\def\btdm@footbottomleft{\insertshortauthor~| \insertshortdate~ }%
+\def\setfootmarker#1{\def\btdm@footbottomleft{#1}}
+\def\btdm@bottomtoc@w{.7\paperwidth}
+%{\insertshortauthor~| \insertshortdate~ }% Todo allow for stuff like tut
 \setbeamertemplate{footline}{\ifdmfoot
 \beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=4ex,sep=2pt,shadow=false]{foot-structure}% default color
     \strut\minipage{\dimexpr\paperwidth-.5cm}%
     \usebeamerfont{page number in head/foot}%
-    \mbox{\dmfootbottomleft}\hfill
-    \parbox{.6\paperwidth}{\centering\smaller\btdm@footline@data}% TODO: configure width
+    \mbox{\btdm@footbottomleft}\hfill
+    \parbox\btdm@bottomtoc@w{\centering\smaller\btdm@footline@data}% TODO: configure width
     \hfill% 6em should be enough space
-    \makebox[6em][r]{\strut\textbf{\usebeamercolor[fg]{foot-page-structure}\insertframenumber\ifnum\insertframestartpage=\insertframeendpage\else{\smaller[2].\insertslidenumber}\fi}\smaller\,/\,\btdm@inserttotalframenumber}%
+    \makebox[6em][r]{\strut\textbf{\usebeamercolor*[fg]{foot-page-structure}\insertframenumber\ifnum\insertframestartpage=\insertframeendpage\else{\smaller[2].\insertslidenumber}\fi}\smaller\,/\,\btdm@inserttotalframenumber}%
     \endminipage\strut
 \endbeamercolorbox\fi}
 
@@ -217,9 +221,9 @@
 % TODO: deal with overfull hboxes
 
 \defbeamertemplate*{frametitle}{digital-minimal}[1][]{%
-\vskip2mm\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=3.55ex,dp=.45ex,sep=2pt,shadow=false]{structure-title}% default color
+\vskip2mm\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=3.55ex,dp=.45ex,sep=2pt,shadow=false]{title-structure}% default color
     \strut\minipage{\dimexpr\paperwidth-.5cm}%
-      \usebeamerfont{structure-title}\strut\insertframetitle
+      \usebeamerfont{title-structure}\strut\insertframetitle
     \endminipage\strut
 \endbeamercolorbox\hspace*{-1cm}}
 \endinput
