--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -34,7 +34,7 @@
 \setbeamercolor{background canvas}{bg=btdm@background}%
 \setbeamercolor{normal text}{fg=btdm@text}
 \setbeamerfont{structure}{family=\sbfamily}
-\setbeamercolor{title-structure}{parent=structure,fg=btdm@primary,bg=lightgray!20!white}
+\setbeamercolor{title-structure}{parent=structure,fg=btdm@text,bg=lightgray!20!white}
 \setbeamerfont{strcuture-title}{parent=structure,size=\LARGE}
 \colorlet{btdm@foot}{gray}
 \setbeamercolor{foot-structure}{bg=lightgray!10!white,fg=btdm@foot}
@@ -221,9 +221,11 @@
 % TODO: deal with overfull hboxes
 
 \defbeamertemplate*{frametitle}{digital-minimal}[1][]{%
-\vskip2mm\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=3.55ex,dp=.45ex,sep=2pt,shadow=false]{title-structure}% default color
-    \strut\minipage{\dimexpr\paperwidth-.5cm}%
-      \usebeamerfont{title-structure}\strut\insertframetitle
-    \endminipage\strut
-\endbeamercolorbox\hspace*{-1cm}}
+\vskip\dimexpr\Gm@lmargin-3.5mm\relax
+% l margin is the left margin so it is aligned with the text
+\hspace*{-3mm}%
+\strut\minipage{\dimexpr\paperwidth-.5cm}%
+   \usebeamercolor*[fg]{title-structure}\usebeamerfont{title-structure}\strut\insertframetitle
+\endminipage
+}
 \endinput
